fix(auth): 카카오 로그인 리뷰 사항 일부 반영
